--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,12 +182,17 @@ button:disabled {
   padding: 12px 24px 0 24px;
 }
 
-@media all and (max-width: 768px) {
+@media all and (min-width: 768px) {
   html {
-    font: 14px;
+    font-size: 40px;
   }
   body {
     background-color: #0070cc;
     width: 100vw;
+    height: 100vh;
+  }
+  .centered-form__box {
+    width: 50vw;
+    height: 50vh;
   }
 }
